output/objects/Adoption_Event_c_00D8K00000163MW__dlm/fields/Address_2_c__c.field-meta.xml
<CustomField>
    <fullName>Address_2_c__c</fullName>
    <label>Address 2</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>