output/objects/Adoption_Event_c_00D8K00000163MW__dlm/fields/Cat_Capacity_c__c.field-meta.xml
<CustomField>
    <fullName>Cat_Capacity_c__c</fullName>
    <label>Cat Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>