output/objects/Adoption_Event_c_00D8K00000163MW__dlm/fields/Start_c__c.field-meta.xml
<CustomField>
    <fullName>Start_c__c</fullName>
    <label>Start</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>